--- a/www/index.html
+++ b/www/index.html
@@ -5,16 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- PWA - manifest -->
+    <link rel="manifest" href="manifest.json"></link>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	
-	<!-- LMCTFY CSS -->
-	<link rel="stylesheet" href="lmctfy.css">
-	
-	<title>LMCTFY!</title>  
+    <!-- LMCTFY CSS -->
+    <link rel="stylesheet" href="lmctfy.css">
+    
+    <title>LMCTFY!</title>  
   </head>
   <body>
-    <!-- Elm  -->
+
+  <!-- PWA - services worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
+    }
+  </script>
+
+  <!-- Elm  -->
 	<div id="elm-div"></div>
 	<script src="lmctfy.js"></script>
     <script>
